--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -498,33 +498,37 @@
                          for (var i = 0; i < vertices.length; i++) {
                               //objects[i].material.color.setHex("0x" + vertices[i][2]); //color data not required as per our professor
                               console.log("adding " + vertices[i][0] + " " + vertices[i][1] + " " + objects[i].material.color.getHexString());
+                              console.log("state of said vertex: " + vertices[i][0]);
                               switch (vertices[i][0]) {
-                                   case 1:     //Nose
+                                   case '1':     //Nose
+                                        console.log("Adding nose");
                                         noseArray.push(vertices[i][1]);
                                         break;
-                                   case 2:     //Eyebrows
+                                   case '2':     //Eyebrows
                                         leyebrowArray.push(vertices[i][1]);
                                         break;
-                                   case 3:
+                                   case '3':
                                         reyebrowArray.push(vertices[i][1]);
                                         break;
-                                   case 4: //Eyes
+                                   case '4': //Eyes
                                         leyeArray.push(vertices[i][1]);
                                         break;
-                                   case 5:
+                                   case '5':
                                         reyeArray.push(vertices[i][1]);
                                         break;
-                                   case 6: //Ears
+                                   case '6': //Ears
                                         learArray.push(vertices[i][1]);
                                         break;
-                                   case 7:
+                                   case '7':
                                         rearArray.push(vertices[i][1]);
                                         break;
-                                   case 8:
+                                   case '8': //Chin
                                         chinArray.push(vertices[i][1]);
                                         break;
+                                   default:
+                                        console.log("adding2 " + vertices[i][0] + " " + vertices[i][1] + " " + objects[i].material.color.getHexString());
                               }
-                              buildMarkerArray(vertices[i][0], vertices[i][1], objects[i].material.color.getHexString());
+                              buildMarkerArray(vertices[i][0], vertices[i][1], 0xff0000);
                          }
                          updateColor(noseArray, objects, 0xff0000); //call updateColor to red for nose
                          updateColor(leyebrowArray, objects, 0xff4000);
@@ -543,56 +547,53 @@
                     console.log("PARSING TEXT");
                     var vertices = [];
                     if (mainText.indexOf('#MarkerStart') == -1) {
-                         alert("Obj file has no marker data");
+                         alert("Invalid marker file.");
                     }
                     else {
                          mainText = mainText.substring(mainText.indexOf('#MarkerStart'));      // Find beginning of marker comments
                          mainText = mainText.substring(mainText.indexOf('\n') + 1);              // Move to first line of data
+                         var state = 0;
                          while (mainText.indexOf('#MarkerEnd') != 0) {                           // Iterate through markers
                               var line = mainText.substring(0, mainText.indexOf('\n'));
-                              vertices.push(line.split(" "));
+                              console.log(line);
+                              // If this line is a new label, convert the label name to its state numberr
+                              switch (line) {
+                                   case '#noseM':
+                                        state = 1;
+                                        break;
+                                   case '#l-eyebrowM':
+                                        state = 2;
+                                        break;
+                                   case '#r-eyebrowM':
+                                        state = 3;
+                                        break;
+                                   case '#l-eyeM':
+                                        state = 4;
+                                        break;
+                                   case '#r-eyeM':
+                                        state = 5;
+                                        break;
+                                   case '#l-earM':
+                                        state = 6;
+                                        break;
+                                   case '#r-earM':
+                                        state = 7;
+                                        break;
+                                   case '#chinM':
+                                        state = 8;
+                                        break;
+                                   // Else, add the label to the vertices array
+                                   default:
+                                        line = state + " " + line;
+                                        console.log("Combined line: " + line);
+                                        vertex = line.split(" ");
+                                        console.log("VERTEX : " + vertex);
+                                        vertices.push(vertex);
+                              }
                               mainText = mainText = mainText.substring(mainText.indexOf('\n') + 1);  //Next Line
                          }
                     }
-                    // Converting the label names to their state number
-                    var vertices2 = vertices;
-                    for (var i = 0; i < vertices2.length; i++) {
-                         switch (vertices2[i][0]) {
-                              case 'noseM':
-                                   vertices2[i][0] = 1;
-                                   break;
-                              case 'l-eyebrowM':
-                                   vertices2[i][0] = 2;
-                                   break;
-                              case 'r-eyebrowM':
-                                   vertices2[i][0] = 3;
-                                   break;
-                              case 'l-eyeM':
-                                   vertices2[i][0] = 4;
-                                   break;
-                              case 'r-eyeM':
-                                   vertices2[i][0] = 5;
-                                   break;
-                              case 'l-earM':
-                                   vertices2[i][0] = 6;
-                                   break;
-                              case 'r-earM':
-                                   vertices2[i][0] = 7;
-                                   break;
-                              case 'chinM':
-                                   vertices2[i][0] = 8;
-                                   break;
-                         }
-                    }
-                    //Output Generation for testing
-                    /*
-                    var output = "Generated 2D array containing the following vertices: \n\n";
-                    for (var i = 0; i < vertices2.length; i++) {
-                         output += "[" + i + "] " + vertices2[i] + "\n";
-                    }
-                    console.log(output);
-                    */
-                    return vertices2;
+                    return vertices;
                }
                //raycast on mouse down
                function onDocumentMouseDown(event) {
