--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -7,17 +7,15 @@
      <meta name="googlebot" content="noindex, nofollow">
      <!--TODO DELETE Not in use <link rel="stylesheet" type="text/css" href="/css/result-light.css">-->
 
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js"></script>
-     <script type="text/javascript"
-          src="https://rawgit.com/mrdoob/three.js/master/examples/js/controls/OrbitControls.js"></script>
+     <script type="text/javascript" src="js/jquery_3.3.1_jquery.min.js"></script>
+     <script type="text/javascript" src="js/three.js_102_three.min.js"></script>
+     <script type="text/javascript" src="js/js_controls_OrbitControls.js"></script>
      <!--TODO DELETE Not in use<script type="text/javascript" src="js/OBJLoader.js"></script-->
-     <script type="text/javascript"
-          src="https://rawgit.com/mrdoob/three.js/master/examples/js/loaders/OBJLoader.js"></script>
-     <script src="http://mrdoob.github.io/stats.js/build/stats.min.js"></script>
-     <script src="https://rawgit.com/eligrey/FileSaver.js/master/src/FileSaver.js"></script>
-     <script src="js/custom/sphereMesh.js"></script>
-     <script src="js/dat.gui.min.js"></script>
+     <script type="text/javascript" src="js/js_loaders_OBJLoader.js"></script>
+     <script type="text/javascript" src="js/build_stats.min.js"></script>
+     <script type="text/javascript" src="js/eligrey_FileSaver.js"></script>
+     <script type="text/javascript" src="js/custom/sphereMesh.js"></script>
+     <script type="text/javascript" src="js/dat.gui.min.js"></script>
 
      <title>Face Marker - GEOM SE</title>
 
