--- a/sourceFiles/index.html
+++ b/sourceFiles/index.html
@@ -59,7 +59,12 @@
                var divElem, divObj;
                var i = 1;
                var loader;
-               var cubeMaterial = new THREE.MeshBasicMaterial({ color: 0xD3D3D3, wireframe: false });
+			   
+			   var faceTexture = new THREE.TextureLoader().load( 'Crate.gif' );
+				// immediately use the texture for material creation
+				var cubeMaterial = new THREE.MeshBasicMaterial( { map: faceTexture, wireframe: false } );
+			   
+               //var cubeMaterial = new THREE.MeshBasicMaterial({ color: 0xD3D3D3, wireframe: false });
                //php -S localhost:8080
                init();
                animate();
